--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "ng-electron-devkit",
+  "name": "@rezonant/ng-electron-devkit",
   "description": "Angular Webpack Build Facade for Electron",
-  "version": "0.11.0",
+  "version": "7.2.11",
   "main": "dist/src/index.js",
+  "private": false,
   "builders": "builders.json",
   "scripts": {
     "build": "tsc"
@@ -11,12 +12,13 @@
     "@types/node": "^10.12.10"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.11.0",
-    "@angular-devkit/build-angular": "^0.11.0",
-    "@angular-devkit/core": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/core": "^7.1.0"
+    "@angular-devkit/architect": "^0.13.7",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular-devkit/core": "^7.3.7",
+    "@angular/compiler": "^7.2.11",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
     "node-loader": "^0.6.0"
