--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^10.12.10"
+    "@types/node": "^10.12.10",
+    "webpack": "^4.35.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.13.7",
-    "@angular-devkit/build-angular": "^0.13.7",
-    "@angular-devkit/core": "^7.3.7",
+    "@angular-devkit/architect": "^0.800.4",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular-devkit/core": "^8.0.4",
     "@angular/compiler": "^7.2.11",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/core": "^7.2.11",
+    "rxjs": "^6.5.2",
     "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
